--- a/www/test.html
+++ b/www/test.html
@@ -1,27 +1,50 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/index.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+        <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+        <meta name="format-detection" content="telephone=no">
+        <meta name="msapplication-tap-highlight" content="no">
+        <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
+        <meta name="color-scheme" content="light dark">
         <title>Example</title>
     </head>
     <body>
-        <div class="login-page">
-            <div class="form">
-                <form class="login-form">
-                    <button id="coursesButton">Cargar Cursos</button>
-                    <div id="lista_cursos">
-                    </div>
-                </form>
+        <nav class="white" role="navigation">
+            <div class="nav-wrapper container">
+              <a id="logo-container" href="#" class="brand-logo">Logo</a>
+              <ul class="right hide-on-med-and-down">
+                <li><a href="#">Navbar Link</a></li>
+              </ul>
+        
+              <ul id="nav-mobile" class="sidenav">
+                <li><a href="#">Navbar Link</a></li>
+              </ul>
+              <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            </div>
+        </nav>
+        <ul id="tabs-swipe-demo" class="tabs">
+            <li class="tab col s3"><a class="active" href="#test-swipe-1">Cursos</a></li>
+            <li class="tab col s3"><a href="#test-swipe-2">Elements i Tasques</a></li>
+        </ul>
+          <!--Page 1-->
+        <div id = "test-swipe-1">
+            <div class="login-page">
+                <div class="form">
+                    <form class="login-form">
+                        <button id="coursesButton">Cargar Cursos</button>
+                        <div id="lista_cursos">
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
+        <div id="test-swipe-2"></div>
         <script src="cordova.js"></script>
-        <script type="text/javascript" src="js/jquery-1.11.1.min.js" id="cordova-jquery"></script>
-        <script type="text/javascript" id="jqm-trans-disable">
-            $(document).on("mobileinit", function() {
-                    $.mobile.defaultPageTransition = "none";
-                    $.mobile.defaultDialogTransition = "none";
-            });
-        </script>
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="js/jquery-1.5.0.mobile.min.js"></script>
-        <script src="js/index.js"></script>
+        <script src="js/materialize.js"></script>
+        <script src="js/init.js"></script>
     </body>
 </html>
